--- a/css/extends.css
+++ b/css/extends.css
@@ -1,10 +1,4 @@
-/* @import './variables.css'; */
+
 @import './global.css';
-
-
-@import './components/navbar.css';
-@import './components/header.css';
-@import './components/about.css';
-@import './components/skills.css';
-@import './components/projects.css';
+@import './components/main.css';
 @import './components/footer.css';
