media query e ajuste de codigo

--- a/css/extends.css
+++ b/css/extends.css
@@ -1,4 +1,4 @@
-
+@import './reset.css';
 @import './global.css';
-@import './components/main.css';
-@import './components/footer.css';
+@import './main.css';
+@import './footer.css';
